--- a/references.bib
+++ b/references.bib
@@ -1325,3 +1325,30 @@
   DATE_ADDED =   {Mon Aug 8 14:35:50 2016},
 }
 
+@article{nahas-2016-first-princ,
+  author =       {Suhas Nahas and Anshu Gaur and Somnath Bhowmick},
+  title =        {First Principles Prediction of Amorphous Phases
+                  Using Evolutionary Algorithms},
+  journal =      {The Journal of Chemical Physics},
+  volume =       145,
+  number =       1,
+  pages =        014106,
+  year =         2016,
+  doi =          {10.1063/1.4955105},
+  url =          {http://dx.doi.org/10.1063/1.4955105},
+  DATE_ADDED =   {Mon Aug 15 17:00:43 2016},
+}
+
+@article{avendano-franco-2016-firef-algor,
+  author =       {Guillermo Avenda{\~n}o-Franco and Aldo H. Romero},
+  title =        {Firefly Algorithm for Structural Search},
+  journal =      {J. Chem. Theory Comput.},
+  volume =       12,
+  number =       7,
+  pages =        {3416-3428},
+  year =         2016,
+  doi =          {10.1021/acs.jctc.5b01157},
+  url =          {http://dx.doi.org/10.1021/acs.jctc.5b01157},
+  DATE_ADDED =   {Mon Aug 15 17:01:41 2016},
+}
+
