--- a/references.bib
+++ b/references.bib
@@ -1352,3 +1352,17 @@
   DATE_ADDED =   {Mon Aug 15 17:01:41 2016},
 }
 
+@article{acı-2016-artif-neural,
+  author =       {Mehmet Acı and Mutlu Avcı},
+  title =        {Artificial Neural Network Approach for Atomic
+                  Coordinate Prediction of Carbon Nanotubes},
+  journal =      {Appl. Phys. A},
+  volume =       122,
+  number =       7,
+  pages =        631,
+  year =         2016,
+  doi =          {10.1007/s00339-016-0153-1},
+  url =          {http://dx.doi.org/10.1007/s00339-016-0153-1},
+  DATE_ADDED =   {Mon Aug 22 19:12:56 2016},
+}
+
